test/files/neg/t4419.scala
class A {
  { val b = a; val a = 1 ; println(a) }
}