test/files/neg/t4419.check
t4419.scala:2: error: forward reference extends over definition of value b
  { val b = a; val a = 1 ; println(a) }
            ^
one error found
